# m3movement

./: .gitignore  README.md
back/: Cargo.toml  app.py  scraper_data.json  seen_products.json
back/src/: main.rs
