[package]
name = "back"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
tokio = { version = "1", features = ["full"] }
thirtyfour = "0.32"
image = "0.24"
base64 = "0.21"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

