[package]
name = "back"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
scraper = { version = "0.25.0", features = ["serde"] }
thirtyfour = { version = "0.36.1", features = ["tokio-multi-threaded"] }
image = { version = "0.25.9", features = ["benchmarks", "serde"] }
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }

